Gerar Tabelas e Gráficos JMetal
Gerar ja nao grava automaticamente e os pesos já nao têm casas decimais
cortadas